# e_timecard

./: README.md  manage.py  pyproject.toml
e_timecard/: asgi.py  settings.py  urls.py  wsgi.py
e_timecard/apps/company/: admin.py  apps.py  models.py
e_timecard/apps/company/migrations/: 0001_initial.py  0002_auto_20220125_0432.py
e_timecard/apps/core/: apps.py  utils.py  views.py
e_timecard/apps/core/templates/core/: base.html  home.html
e_timecard/apps/employee/: admin.py  apps.py  models.py
e_timecard/apps/employee/migrations/: 0001_initial.py
